Fixed: Start button not working properly on mobile device

--- a/style.css
+++ b/style.css
@@ -118,7 +118,6 @@ nav img {
   position: absolute;
   left: 0;
   bottom: -15%;
-  /* z-index: -1; */
   width: 100%;
   height: 20px;
   display: flex;
@@ -128,6 +127,11 @@ nav img {
   background-color: #838502;
   opacity: 0;
   border-radius: 20px;
+  pointer-events: none;
+}
+
+.next-round-msg.active {
+  pointer-events: auto;
 }
 
 .new-round-popup {
